--- a/client/src/app/modules/tiers/components/principal/principal.component.html
+++ b/client/src/app/modules/tiers/components/principal/principal.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z2 form-div">
-  <form [formGroup]="generatorForm">
+  <form [formGroup]="principalForm">
     <div class="full-width">
       <fieldset [disabled]="editMode==false" class="fieldset-no-border">
         <table class="full-width">
@@ -21,7 +21,7 @@
                 <input matInput formControlName="tiersId" [(ngModel)]="tiers.id" placeholder="N° client/prospect">
               </mat-form-field>
             </td>
-            <td *ngIf="tiers.isIndividual==false">
+            <td [hidden]="tiers.isIndividual">
               <mat-form-field class="full-width">
                 <mat-label>Denomination</mat-label>
                 <input matInput formControlName="denomination" [(ngModel)]="tiers.denomination"
@@ -222,7 +222,7 @@
 
         <table class="full-width">
           <tr>
-            <td *ngIf="tiers.isIndividual==false">
+            <td [hidden]="tiers.isIndividual">
               <mat-form-field class="full-width">
                 <mat-label>TVA intercommunaitaire</mat-label>
                 <input matInput formControlName="intercommunityVat" [(ngModel)]="tiers.intercommunityVat"
@@ -281,7 +281,7 @@
                     <mat-icon matChipRemove *ngIf="editMode==false" (click)="prepareMail(mail)">mail</mat-icon>
                   </mat-chip>
                   <input placeholder="Saisir un mail" #mailInput formControlName="mails"
-                    [matChipInputFor]="chipListMails" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                    [matChipInputFor]="chipListMails" [matChipInputSeparatorKeyCodes]="SEPARATOR_KEY_CODES"
                     (matChipInputTokenEnd)="addMail($event)">
                 </mat-chip-list>
               </mat-form-field>
@@ -298,7 +298,7 @@
                     <mat-icon matChipRemove *ngIf="editMode==false" (click)="call(phone)">phone</mat-icon>
                   </mat-chip>
                   <input placeholder="Saisir un téléphone" #phoneInput formControlName="phones"
-                    [matChipInputFor]="chipListPhones" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                    [matChipInputFor]="chipListPhones" [matChipInputSeparatorKeyCodes]="SEPARATOR_KEY_CODES"
                     (matChipInputTokenEnd)="addPhone($event)">
                 </mat-chip-list>
               </mat-form-field>
@@ -341,15 +341,6 @@
             </td>
           </tr>
         </table>
-
-        <div class="button-row" align="end" *ngIf="editMode==true">
-          <button mat-raised-button class="mat-raised-button" color="accent" [disabled]="!checkFormValidation()"
-            (click)="saveTiers()">Sauvegarder</button>
-        </div>
-
-        <button mat-fab color="accent" class="fab-button" *ngIf="editMode==false">
-          <mat-icon (click)="editTiers()">edit</mat-icon>
-        </button>
       </fieldset>
     </div>
   </form>
