First final version of Tiers component

--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.css
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.css
@@ -37,3 +37,12 @@ td {
 .checkbox-margin {
   margin: 0 12px;
 }
+
+tr.mat-row {
+  height: 20px;
+}
+
+.table-container-scroll {
+  max-height: 215px;
+  overflow-y: auto;
+}
