--- a/client/src/app/modules/miscellaneous/components/history/history.component.html
+++ b/client/src/app/modules/miscellaneous/components/history/history.component.html
@@ -20,10 +20,8 @@
       </ng-container>
       <ng-container matColumnDef="createdBy">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Auteur</th>
-        <td mat-cell *matCellDef="let element">{{element.createdBy!=null
-          ?element.createdBy.firstname:""}}
-          {{element.createdBy!=null
-          ?element.createdBy.lastname:""}}</td>
+        <td mat-cell *matCellDef="let element">{{element.username!=null
+          ?element.username:""}}</td>
       </ng-container>
       <ng-container matColumnDef="creationDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Modifié le</th>
