--- a/client/src/app/modules/tiers/components/tiers-attachments/tiers-attachments.component.html
+++ b/client/src/app/modules/tiers/components/tiers-attachments/tiers-attachments.component.html
@@ -20,9 +20,7 @@
       <ng-container matColumnDef="createdBy">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Ajouté par</th>
         <td mat-cell *matCellDef="let element">{{element.uploadedFile.createdBy!=null
-          ?element.uploadedFile.createdBy.firstname:""}}
-          {{element.uploadedFile.createdBy!=null
-          ?element.uploadedFile.createdBy.lastname:""}}</td>
+          ?element.uploadedFile.createdBy:""}}</td>
       </ng-container>
       <ng-container matColumnDef="creationDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Ajouté le</th>
